Updated text to remove mention of k-medoids, changed to k-means

--- a/09_longitudinal_clustering_markdown.Rmd
+++ b/09_longitudinal_clustering_markdown.Rmd
@@ -38,13 +38,13 @@ The issue with this approach is that financialisation is not a continuum - at le
 
 To give an example, there is an ongoing scandal in the housing association sector relating to lease-based supported housing providers. These are typically small providers of supported housing that have exempt rents - i.e. rents exempt from Housing Benefit caps, and therefore typically rents that are higher than the average - but do not own the housing, instead they lease the housing from a private investor. The sector has been embroiled in scandal because the lease arrangements often transfer significant commercial risk to the association, with lease payments increasing at a rate that can't be supported by rental revenue putting the financial viability of the association at risk, while the profits extracted by investors from exempt rents are high, and the standards provided to tenants often very poor. There seems little doubt that the lease-based supported housing scandal represents a manifestation of financialisation, but because the housing is leased, they typically have very low gearing and high interest cover. Some providers are even massive outliers in this respect. And so in the longitudinal regression they would be seen as *less financialised*, but a more accurate description would be to say that the form of financialisation actually differs in nature, and with consequences that are particularly acute for tenants.  
 
-## Alternative approach - Longitudinal k-medoids clustering
+## Alternative approach - Longitudinal k-means clustering
 
 An alternative approach that utilises the strengths of the longitudinal regression, but is more congruent with the conceptualisation of financialisation as variegated, is to conduct longitudinal clustering on gearing and EBITDA MRI %. The benefit of clustering is that it represents an exploratory approach that categorises housing associations according to their relationship with debt finance over time, without implying an association is necessarily more or less financialised.  
 
 A recent study by [Den Teuling *et al.* (2021)](https://www.tandfonline.com/doi/full/10.1080/03610918.2020.1861464) compared the performance of different longitudinal clustering methods where trends are non-linear. Based on the results of monte-carlo simulations, they recommend an approach refered to as **growth curve k-means (GCKM)**, due to its high performance and computational efficiency. GCKM first builds a longitudinal regression model using a multilevel framework, typically with a polynomial fit of degree specified by the researcher for the time variable, and then conducts k-means clustering on the random effects for each group.  
 
-To understand the financialisation of the English housing association sector I apply and extend GCKM to  housing association balance sheet data from 2017-2021. I extend GCKM by taking the random effects from two depednent variables - gearing and EBITDA MRI%, both with a two degree orthogonal polynomial for financial year - and also applying k-medoids as it less sensitive to the outliers that are present in the long-tailed EBITDA MRI% distribution. Nonetheless, four outlier organisations are removed due to their extreme EBITDA MRI%, which when included cause clusters to emerge made up of single organisations.  
+To understand the financialisation of the English housing association sector I apply and extend GCKM to  housing association balance sheet data from 2017-2021. I extend GCKM by taking the random effects from two depednent variables - gearing and EBITDA MRI%, both with a two degree orthogonal polynomial for financial year - and then applying k-means. The analysis is conducted on the dataset used for the EBITDA MRI % longitudinal regression, and therefore five outlier housing associations are removed.    
 
 ## Data preparation
 
@@ -356,7 +356,7 @@ The results of a K=4 solution are presented in a similar fashion below, except a
 3. Cluster 3 (n=2): very low (and falling) gearing, high (and rapidly rising) EBITDA MRI, small supported housing providers  
 4. Cluster 4 (n=65): high gearing and low EBITDA MRI, developing housing associations  
 
-Given that the addition of cluster 3 is the primary separation between each solution, and that cluster 3 is made up of only two cases, it makes intuitive sense than k=3 was the most frequent bootstrap NbClust solution, as these two cases would be ommitted from the resampling in a number of iterations.  Therefore, there are merits to choosing either cluster solution. One of the benefits of choosing a four cluster solution is the congruence with theory.  To illustrate, the following quote is taken from the annual accounts of one of the housing associations in Cluster 3:  
+Given that the addition of cluster 3 is the primary separation between each solution, and that cluster 3 is made up of only two cases, it makes intuitive sense that k=3 was the most frequent bootstrap NbClust solution, as these two cases would be ommitted from the resampling in a number of iterations.  Therefore, there are merits to choosing either cluster solution. One of the benefits of choosing a four cluster solution is the congruence with theory.  To illustrate, the following quote is taken from the annual accounts of one of the housing associations in Cluster 3:  
 
 *"Gearing is low compared to many housing associations. This is because the primary constraint on our housing development is the availability of capital grants and ongoing revenue funding, both of which affect our operating margins, rather than loan finance. It would be possible to borrow more and thus develop more quickly, but the risks in doing so are higher than the Board can accept given our margins."*  
 
